<resources>
    <string name="app_name">Criss-Cross</string>
    <string name="app_ico">APP_ICO</string>
    <string name="powered_by"><![CDATA[Powered By <DevByHeart/❤>]]></string>
    <string name="players">PLAYERS</string>
    <string name="player_1">Enter Name Of Cross Player</string>
    <string name="player_2">Enter Name Of Circle Player</string>
    <string name="back">BACK</string>
    <string name="back1">BACK!</string>
    <string name="playerOne">Player 1</string>
    <string name="playerTwo">Player 2</string>
    <string name="play">PLAY</string>
    <string name="copyright">Copyright©2022, All rights reserved.</string>
    <string name="char_warn">Note: Player name will not be allowed greater than 10 characters !</string>
    <string name="start">CONTINUE</string>
    <string name="back11">BACK!</string>
    <string name="back2">BACK2</string>
    <string name="game_instruction">Game Instruction</string>
    <string name="game_ins">This game has two main objects cross and circle.\nThe text colour of the circle and cross\nare respectively red and yellow.\nAny matching position of circle/cross in the grid will decide the winner of the game.</string>
    <string name="tap_play">Tap to play !</string>
    <string name="dismiss">Dismiss</string>
    <string name="asp">ASP</string>
    <string name="asp2">ASP2</string>
    <string name="congo">🎉 Congratulations 🎉</string>
    <string name="won">Someone won the match !</string>
    <string name="got">Got it !</string>
    <string name="draw_match">Draw match !</string>
    <string name="play_again">Play Again !</string>
    <string name="boom">BOOM</string>
    <string name="about">About This Game</string>
    <string name="legal">Legal</string>
    <string name="version">Version: 12.3.0.1</string>
    <string name="developer">Developer: Purnendu Guha</string>
    <string name="state_legal"><![CDATA[Made in India with ❤\nProudly designed by <DevByHeart/❤>\nCopyright©2022, All rights reserved.]]></string>
    <string name="sep">.......................</string>
    <string name="book">BOOK</string>
    <string name="criss">Criss</string>
    <string name="cross">CROSS</string>
</resources>