<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".player_selection">

    <ImageView
        android:id="@+id/pback1"
        android:layout_width="325dp"
        android:layout_height="150dp"
        android:contentDescription="@string/back11"
        android:soundEffectsEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.146"
        app:srcCompat="@drawable/player_name_back" />

    <ImageView
        android:id="@+id/pback2"
        android:layout_width="325dp"
        android:layout_height="150dp"
        android:contentDescription="@string/back2"
        android:soundEffectsEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.616"
        app:srcCompat="@drawable/player_name_back" />

    <TextView
        android:id="@+id/pname1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:soundEffectsEnabled="false"
        android:text="@string/player_1"
        android:textColor="@color/black"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.146" />

    <EditText
        android:id="@+id/input_pname1"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:autofillHints="Name"
        android:background="@drawable/name_input_style"
        android:ems="10"
        android:foregroundGravity="center"
        android:gravity="center"
        android:inputType="textPersonName"
        android:maxLength="10"
        android:soundEffectsEnabled="false"
        android:textColor="#fff200"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/pback1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pname1"
        app:layout_constraintVertical_bias="0.391"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/pname2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:gravity="center"
        android:soundEffectsEnabled="false"
        android:text="@string/player_2"
        android:textColor="@color/black"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/pback2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/input_pname2"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:autofillHints="Name"
        android:background="@drawable/name_input_style"
        android:ems="10"
        android:foregroundGravity="center"
        android:gravity="center"
        android:inputType="textPersonName"
        android:maxLength="10"
        android:soundEffectsEnabled="false"
        android:textColor="#ec1c24"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/pback2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pname2"
        app:layout_constraintVertical_bias="0.343"
        tools:ignore="LabelFor" />

    <ImageView
        android:id="@+id/cont"
        android:layout_width="205dp"
        android:layout_height="84dp"
        android:contentDescription="@string/start"
        android:soundEffectsEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.837"
        app:srcCompat="@drawable/continue_button" />

    <TextView
        android:id="@+id/note"
        android:layout_width="265dp"
        android:layout_height="88dp"
        android:fontFamily="@font/ubuntu_light"
        android:gravity="center"
        android:soundEffectsEnabled="false"
        android:text="@string/char_warn"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cont"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:soundEffectsEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04"
        app:srcCompat="@drawable/close"
        android:contentDescription="@string/criss" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:soundEffectsEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.439"
        app:srcCompat="@drawable/circle"
        android:contentDescription="@string/cross" />

</androidx.constraintlayout.widget.ConstraintLayout>