<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/black">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:soundEffectsEnabled="false"
        app:cardCornerRadius="40dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/app_background"
            android:soundEffectsEnabled="false">

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="309dp"
                android:layout_height="456dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:contentDescription="@string/boom"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.498" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/about"
                android:textColor="@color/white"
                android:textSize="23sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imageView13"
                app:layout_constraintEnd_toEndOf="@+id/imageView13"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="@+id/imageView13"
                app:layout_constraintTop_toTopOf="@+id/imageView13"
                app:layout_constraintVertical_bias="0.1" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/version"
                android:textColor="@color/white"
                android:textSize="23sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView13"
                app:layout_constraintEnd_toEndOf="@+id/imageView13"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="@+id/imageView13"
                app:layout_constraintTop_toTopOf="@+id/imageView13"
                app:layout_constraintVertical_bias="0.279" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/developer"
                android:textColor="@color/white"
                android:textSize="23sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView13"
                app:layout_constraintEnd_toEndOf="@+id/imageView13"
                app:layout_constraintHorizontal_bias="0.487"
                app:layout_constraintStart_toStartOf="@+id/imageView13"
                app:layout_constraintTop_toTopOf="@+id/imageView13"
                app:layout_constraintVertical_bias="0.437" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/sep"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imageView13"
                app:layout_constraintEnd_toEndOf="@+id/imageView13"
                app:layout_constraintStart_toStartOf="@+id/imageView13"
                app:layout_constraintTop_toTopOf="@+id/imageView13"
                app:layout_constraintVertical_bias="0.521" />

            <ImageView
                android:id="@+id/back"
                android:layout_width="57dp"
                android:layout_height="52dp"
                android:contentDescription="@string/book"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.071"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.039"
                app:srcCompat="@drawable/back_btn" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>